@@ -1,3 +1,10 @@
+2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	New (database postgres-resx) proc: object<-result
+
+	* doc/guile-pg.twerp (Result Transforms): Reorg intro blurbs
+	slightly; add @twerpdoc for `object<-result'.
+
 2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Use guile.m4 facilities from Guile 1.4.1.118.
